fix: overflow problems

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ li {
 }
  .skillsBadges {
   margin: 5px;
+  overflow-x: auto;
  }
 
 .skillsdiv {
